--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <main>
       <div class="cards">
-        <section class="card card--2">
+        <section class="card">
           <h2>Aliquam erat volutpat in dignissim id sagittis nec leo</h2>
           <div>
             <div>
@@ -22,7 +22,7 @@
           </div>
         </section>
 
-        <section class="card card--3">
+        <section class="card">
           <h2>Loremipsumdolorsitametconsecteturadipiscingelit</h2>
           <div>
             <div>
@@ -33,7 +33,7 @@
           </div>
         </section>
 
-        <section class="card card--4">
+        <section class="card">
           <h2>Proin dui leo</h2>
           <div>
             <div>
@@ -47,7 +47,7 @@
           </div>
         </section>
 
-        <section class="card card--5">
+        <section class="card">
           <h2>Lorem ipsum</h2>
           <div>
             <div>
@@ -60,7 +60,7 @@
           </ul>
         </section>
 
-        <section class="card card--6">
+        <section class="card">
           <h2>Lorem ipsum</h2>
           <div>
             <div>
@@ -84,7 +84,7 @@
           </ul>
         </section>
 
-        <section class="card card--1">
+        <section class="card card--first">
           <h2>Lorem ipsum</h2>
           <div>
             <div>
